# md2mip

./: .gitignore  CITATION.cff  CLAUDE.md  Makefile  README.md  plan-md2mip.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: assignment.yaml  blending.yaml  capital_budgeting.yaml  facility_location.yaml  graph_coloring.yaml  job_shop.yaml  knapsack.yaml  lot_sizing.yaml  multicommodity_flow.yaml  n_queens.yaml  nasty_misleading.yaml  nasty_trivial.yaml  set_covering.yaml  sudoku.yaml  transportation.yaml  transportation_infeasible.yaml  transportation_large.yaml  tsp_mtz.yaml  unit_commitment.yaml
fixtures/: assignment.ir.json  blending.ir.json  capital_budgeting.ir.json  facility_location.ir.json  graph_coloring.ir.json  job_shop.ir.json  knapsack.ir.json  lot_sizing.ir.json  multicommodity_flow.ir.json  n_queens.ir.json  set_covering.ir.json  sudoku.ir.json  transportation.ir.json  tsp_mtz.ir.json  unit_commitment.ir.json
models/: assignment.md  blending.md  capital_budgeting.md  facility_location.md  graph_coloring.md  job_shop.md  knapsack.md  lot_sizing.md  multicommodity_flow.md  n_queens.md  nasty_assignment.md  nasty_capital_budgeting.md  nasty_diet.md  nasty_graph_coloring.md  nasty_job_shop.md  nasty_knapsack.md  nasty_misleading.md  nasty_multicommodity_flow.md  nasty_n_queens.md  nasty_set_covering.md  nasty_sudoku.md  nasty_transport.md  nasty_trivial.md  nasty_tsp_mtz.md  nasty_unit_commitment.md  set_covering.md  sudoku.md  transportation.md  tsp_mtz.md  unit_commitment.md
src/md2mip/: __init__.py  cli.py  codegen.py  compiler.py  data_template.py  ir.py  llm.py  ocr.py  prompt.py  retry.py
tests/: conftest.py  generate_test_images.py  test_cli.py  test_codegen.py  test_generated.py  test_ir.py  test_llm_integration.py  test_ocr.py  test_retry.py
