[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md2mip"
version = "0.1.0"
description = "Compile Markdown/LaTeX MIP models into standalone Python solver scripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Simon Spoorendonk" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "litellm",
    "click",
]

[project.urls]
Homepage = "https://github.com/spoorendonk/md2mip"
Repository = "https://github.com/spoorendonk/md2mip"
Issues = "https://github.com/spoorendonk/md2mip/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "highspy",
    "numpy",
    "pyyaml",
    "Pillow",
    "matplotlib",
    "ruff",
    "mypy",
]

[project.scripts]
md2mip = "md2mip.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM116"]  # allow if/elif chains for readability

[tool.ruff.lint.per-file-ignores]
"src/md2mip/prompt.py" = ["E501"]  # LLM prompt text, line length doesn't matter
"src/md2mip/compiler.py" = ["SIM115"]  # intentional: tempfile with delete=False + manual cleanup

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "solver: tests that require HiGHS solver (run by default)",
    "llm: tests that require an LLM API (skipped by default, run with pytest -m llm)",
]
